spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/GrvFix__c.object-meta.xml
<CustomObject>
    <label>GRV Fix</label>
    <nameField>
        <label>GRV Fix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GRV Fixes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>