spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvBool__c.field-meta.xml
<CustomField>
    <fullName>GrvBool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grv Bool</label>
    <type>Checkbox</type>
</CustomField>