spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvDate__c.field-meta.xml
<CustomField>
    <fullName>GrvDate__c</fullName>
    <label>Grv Date</label>
    <type>Date</type>
</CustomField>