spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvDateTime__c.field-meta.xml
<CustomField>
    <fullName>GrvDateTime__c</fullName>
    <label>Grv DateTime</label>
    <type>DateTime</type>
</CustomField>