spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvDecimal__c.field-meta.xml
<CustomField>
    <fullName>GrvDecimal__c</fullName>
    <label>Grv Decimal</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>