spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvFormula__c.field-meta.xml
<CustomField>
    <fullName>GrvFormula__c</fullName>
    <formula>IF(ISBLANK(GrvInt__c), &quot;null&quot;, TEXT(GrvInt__c)) &amp; &quot;:&quot; &amp; IF(GrvBool__c = NULL, &quot;?&quot;, IF(GrvBool__c, &quot;T&quot;, &quot;F&quot;))</formula>
    <label>Grv Formula</label>
    <type>Text</type>
</CustomField>