spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvInt__c.field-meta.xml
<CustomField>
    <fullName>GrvInt__c</fullName>
    <label>Grv Int</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>