spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvLongText__c.field-meta.xml
<CustomField>
    <fullName>GrvLongText__c</fullName>
    <label>Grv Long Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>