spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvPartitionDate__c.field-meta.xml
<CustomField>
    <fullName>GrvPartitionDate__c</fullName>
    <label>Grv Partition Date</label>
    <type>Date</type>
</CustomField>