spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvPicklist__c.field-meta.xml
<CustomField>
    <fullName>GrvPicklist__c</fullName>
    <label>Grv Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alpha</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Gamma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>