spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvRel__c.field-meta.xml
<CustomField>
    <fullName>GrvRel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grv Rel</label>
    <referenceTo>GrvFixRel__c</referenceTo>
    <relationshipLabel>GRV Fixes</relationshipLabel>
    <relationshipName>GRV_Fixes</relationshipName>
    <type>Lookup</type>
</CustomField>