spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvStatus__c.field-meta.xml
<CustomField>
    <fullName>GrvStatus__c</fullName>
    <label>Grv Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>