spec/fixtures/release-validation/salesforce/force-app/main/default/objects/GrvFix__c/fields/GrvText__c.field-meta.xml
<CustomField>
    <fullName>GrvText__c</fullName>
    <label>Grv Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>